<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/locationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:onClick="goToLocation"

        />
    <Button
        android:id="@+id/lightSensorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/light_sensor"
        android:onClick="goToSensors"
        />
    <Button
        android:id="@+id/accelerationSensorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceleration_sensor"
        android:onClick="goToSensors"
        />
    <Button
        android:id="@+id/allSensorsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_all_sensors"
        android:onClick="goToAllSensors"
        />
    <Button
        android:id="@+id/compassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compass"
        android:onClick="goToCompass"
        />

</LinearLayout>